--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
   text-align: center;
-  background-color: #283149;
+  background-color: #267773;
 }
 
 h1 {
   font-size: 5rem;
   color: #DBEDF3;
   font-family: "Arvo", cursive;
-  text-shadow: 3px 0 #DA0463;
+  text-shadow: 3px 0 #181718;
 
 }
 
@@ -49,8 +49,8 @@ footer {
 }
 
 .game-over {
-  background-color: red;
-  opacity: 0.8;
+  background-color: rgb(176, 26, 193);
+  opacity: 0.9;
 }
 
 .pressed {
@@ -59,18 +59,18 @@ footer {
 }
 
 .red {
-  color: red;
+  color: rgb(20, 20, 20);
 }
 
 
 .drum {
   outline: none;
-  border: 10px solid #404B69;
+  border: 10px solid #0b0b0b;
   font-size: 5rem;
   font-family: 'Arvo', cursive;
   line-height: 2;
   font-weight: 900;
-  color: #DA0463;
+  color: #0f0d0e;
   text-shadow: 3px 0 #DBEDF3;
   border-radius: 15px;
   display: inline-block;
